pom.xml cleanup and updates
* Include snapshot repository for hazelcast snapshot version sources
* Remove unused properties
* Set project source level to 1.8
* Simplify JVM parameters for tests and add GC logging